--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Cormorant+Upright:wght@600&family=EB+Garamond&display=swap" rel="stylesheet">
 		<title>Nadir</title>
-		<script type="module" crossorigin src="/nadir/assets/index.7bbd219b.js"></script>
+		<script type="module" crossorigin src="/nadir/assets/index.86f860ab.js"></script>
 	</head>
 
 	<body>
